fixed notebook examples

--- a/example/predics_tags.ipynb
+++ b/example/predics_tags.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 1,
    "metadata": {
     "collapsed": true
    },
@@ -48,7 +48,7 @@
    "outputs": [],
    "source": [
     "subjects=['biology', 'cooking', 'crypto', 'diy', 'robotics', 'travel']\n",
-    "path2data = '../data/'\n",
+    "path2data = '../data/predict_tags/'\n",
     "batch_size = 32"
    ]
   },
@@ -60,10 +60,10 @@
    },
    "outputs": [],
    "source": [
-    "dsets = {\n",
-    "    'train': TextDataset(subjects, path2data + 'train/', is_train = True),\n",
-    "    'valid': TextDataset(subjects, path2data + 'train/', is_valid=True),\n",
-    "    'test':  TextDataset(subjects, path2data + 'test/',  is_test=True),\n",
+    "text = {\n",
+    "    'train': TextProcessing(path2data + 'train/', is_train = True),\n",
+    "    'valid': TextProcessing(path2data + 'train/', is_valid=True),\n",
+    "    'test':  TextProcessing( path2data + 'test/',  is_test=True),\n",
     "}"
    ]
   },
@@ -174,17 +174,19 @@
     }
    ],
    "source": [
-    "dsets['train'].data.head()"
+    "text['train'].data.head()"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 5,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
-    "dsets['train'].process_data(col = 'title', lemmalize = False, stem = False)\n",
-    "dsets['train'].process_data(col = 'content', lemmalize = False, stem = False)"
+    "text['train'].process_data(col = 'title', lemmalize = False, stem = False)\n",
+    "text['train'].process_data(col = 'content', lemmalize = False, stem = False)"
    ]
   },
   {
@@ -320,7 +322,7 @@
     }
    ],
    "source": [
-    "dsets['train'].data.head()"
+    "text['train'].data.head()"
    ]
   },
   {
@@ -331,8 +333,8 @@
    },
    "outputs": [],
    "source": [
-    "g_tags = WordsGraph(dsets['train'].data)\n",
-    "g_data = WordsGraph(dsets['train'].data, col = 'content_data', weight = 500)"
+    "g_tags = WordsGraph(text['train'].data)\n",
+    "g_data = WordsGraph(text['train'].data, col = 'content_data', weight = 500)"
    ]
   },
   {
@@ -623,7 +625,7 @@
     }
    ],
    "source": [
-    "dsets['train'].data.head()"
+    "text['train'].data.head()"
    ]
   },
   {
@@ -641,8 +643,8 @@
    },
    "outputs": [],
    "source": [
-    "dsets['test'].process_data(col = 'title', lemmalize = False, stem = False)\n",
-    "dsets['test'].process_data(col = 'content', lemmalize = False, stem = False)"
+    "text['test'].process_data(col = 'title', lemmalize = False, stem = False)\n",
+    "text['test'].process_data(col = 'content', lemmalize = False, stem = False)"
    ]
   },
   {
@@ -765,71 +767,26 @@
     }
    ],
    "source": [
-    "dsets['test'].data.head()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 37,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "dsets['test'].data['teste'] = dsets['test'].data.content_data.apply(lambda x: ' '.join(set(x.split())))"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 40,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "'i often hear subatomic particles property called spin also actually relate spinning axis like would think which particles spin what spin mean actual spinning motion'"
-      ]
-     },
-     "execution_count": 40,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "dsets['test'].data['content_data'][0]"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 39,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "'called spinning also i think what like often actually relate property hear particles axis spin would actual subatomic motion mean which'"
-      ]
-     },
-     "execution_count": 39,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "dsets['test'].data['teste'][0]"
+    "text['test'].data.head()"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 13,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
-    "tfid = Tfid(dsets['test'].data.content_data.values + ' ' + dsets['test'].data.title_data.values)"
+    "tfid = Tfid(text['test'].data.content_data.values + ' ' + text['test'].data.title_data.values)"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 14,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "tfid.get_frequency()\n",
@@ -887,9 +844,9 @@
    "source": [
     "top = 3\n",
     "output = []\n",
-    "for i in range(0,len(dsets['test'].data)):\n",
+    "for i in range(0,len(text['test'].data)):\n",
     "    prediction = sorted(tfidf[i], key=tfidf[i].get, reverse=True)[0:top]\n",
-    "    output.append([dsets['test'].data.id[i], ' '.join(prediction)])"
+    "    output.append([text['test'].data.id[i], ' '.join(prediction)])"
    ]
   },
   {
@@ -984,7 +941,9 @@
   {
    "cell_type": "code",
    "execution_count": 25,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "def create_submission_file(info, df):\n",
@@ -1024,7 +983,7 @@
    "source": [
     "# index into the Bag of words vector\n",
     "words_ix = {}\n",
-    "for index, row in dsets['train'].data.iterrows():\n",
+    "for index, row in text['train'].data.iterrows():\n",
     "    for word in row['data'].split():\n",
     "        if word not in words_ix:\n",
     "            words_ix[word] = len(words_ix)"
@@ -1234,7 +1193,7 @@
     }
    ],
    "source": [
-    "NLPtrainner.train(dsets['train'], 2)"
+    "NLPtrainner.train(text['train'], 2)"
    ]
   },
   {
@@ -1245,7 +1204,7 @@
    },
    "outputs": [],
    "source": [
-    "dsets['test'].process_data(lemmalize = False, stem = False)"
+    "text['test'].process_data(lemmalize = False, stem = False)"
    ]
   },
   {
@@ -1276,7 +1235,7 @@
    "source": [
     "ii_n = len(dsets['test'])\n",
     "log_probs = []\n",
-    "for i, (instance, label) in enumerate(dsets['test'].data):\n",
+    "for i, (instance, label) in enumerate(text['test'].data):\n",
     "    bow_vec = autograd.Variable(NLPtrainner.make_bow_vector(instance, words_ix))\n",
     "    log_probs.append(NLPtrainner.model(bow_vec))\n",
     "    print('\\rPredict: {}/{}'.format(i, ii_n - 1), end='')\n",
