--- a/example/toxic_comments.ipynb
+++ b/example/toxic_comments.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "metadata": {
     "collapsed": true
    },
@@ -41,7 +41,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
    "metadata": {
     "collapsed": true
    },
@@ -52,300 +52,186 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
-   "metadata": {},
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
-    "dsets = {\n",
-    "    'train': TextDataset(path2data + 'train/', is_train = True),\n",
-    "    'train': TextDataset(path2data + 'train/', is_valid = True),\n",
-    "    'test':  TextDataset(path2data + 'test/',  is_test=True),\n",
+    "text = {\n",
+    "    'train': TextProcessing(path2data + 'train/', is_train = True),\n",
+    "    'train': TextProcessing(path2data + 'train/', is_valid = True),\n",
+    "    'test':  TextProcessing(path2data + 'test/',  is_test=True),\n",
     "}"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/html": [
-       "<div>\n",
-       "<style>\n",
-       "    .dataframe thead tr:only-child th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: left;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>id</th>\n",
-       "      <th>comment_text</th>\n",
-       "      <th>toxic</th>\n",
-       "      <th>severe_toxic</th>\n",
-       "      <th>obscene</th>\n",
-       "      <th>threat</th>\n",
-       "      <th>insult</th>\n",
-       "      <th>identity_hate</th>\n",
-       "      <th>subject</th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>81227</th>\n",
-       "      <td>d94c8f3495bcd65b</td>\n",
-       "      <td>Again, the argument here is policy-based, it h...</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>train</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>118300</th>\n",
-       "      <td>78276268820bec18</td>\n",
-       "      <td>I like how you keep going to other people's ta...</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>train</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>156474</th>\n",
-       "      <td>cebbdd894d315a6f</td>\n",
-       "      <td>. \\nLast chance, Im about to block you.</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>train</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>91049</th>\n",
-       "      <td>f38efec7058d2309</td>\n",
-       "      <td>Sunflower \\nThanks for letting me know, RH. An...</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>train</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>18303</th>\n",
-       "      <td>305339814c820266</td>\n",
-       "      <td>\"\\n\\n Dear Mr.Slrubenstein. Your point about N...</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>train</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "</div>"
-      ],
-      "text/plain": [
-       "                      id                                       comment_text  \\\n",
-       "81227   d94c8f3495bcd65b  Again, the argument here is policy-based, it h...   \n",
-       "118300  78276268820bec18  I like how you keep going to other people's ta...   \n",
-       "156474  cebbdd894d315a6f            . \\nLast chance, Im about to block you.   \n",
-       "91049   f38efec7058d2309  Sunflower \\nThanks for letting me know, RH. An...   \n",
-       "18303   305339814c820266  \"\\n\\n Dear Mr.Slrubenstein. Your point about N...   \n",
-       "\n",
-       "        toxic  severe_toxic  obscene  threat  insult  identity_hate subject  \n",
-       "81227       0             0        0       0       0              0   train  \n",
-       "118300      0             0        0       0       0              0   train  \n",
-       "156474      0             0        0       0       0              0   train  \n",
-       "91049       0             0        0       0       0              0   train  \n",
-       "18303       0             0        0       0       0              0   train  "
-      ]
-     },
-     "execution_count": 4,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
-    "dsets['train'].data.head()"
+    "text['train'].data.head()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "/Users/renatobottermaiolopesrodrigues/anaconda3/lib/python3.6/site-packages/bs4/__init__.py:282: UserWarning: \"http://www.haaretz.com/news/diplomacy-defense/2-279-calories-per-person-how-israel-made-sure-gaza-didn-t-starve.premium-1.470419\" looks like a URL. Beautiful Soup is not an HTTP client. You should probably use an HTTP client like requests to get the document behind the URL, and feed that document to Beautiful Soup.\n",
-      "  ' that document to Beautiful Soup.' % decoded_markup\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
-    "dsets['train'].process_data(col = 'comment_text', lemmalize = False, stem = False)"
+    "text['train'].process_data(col = 'comment_text', lemmalize = False, stem = False)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/html": [
-       "<div>\n",
-       "<style>\n",
-       "    .dataframe thead tr:only-child th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: left;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>id</th>\n",
-       "      <th>comment_text</th>\n",
-       "      <th>toxic</th>\n",
-       "      <th>severe_toxic</th>\n",
-       "      <th>obscene</th>\n",
-       "      <th>threat</th>\n",
-       "      <th>insult</th>\n",
-       "      <th>identity_hate</th>\n",
-       "      <th>subject</th>\n",
-       "      <th>comment_text_data</th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>81227</th>\n",
-       "      <td>d94c8f3495bcd65b</td>\n",
-       "      <td>Again, the argument here is policy-based, it h...</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>train</td>\n",
-       "      <td>again article simple naming population however...</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>118300</th>\n",
-       "      <td>78276268820bec18</td>\n",
-       "      <td>I like how you keep going to other people's ta...</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>train</td>\n",
-       "      <td>pity baseless people's wild also get so marrie...</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>156474</th>\n",
-       "      <td>cebbdd894d315a6f</td>\n",
-       "      <td>. \\nLast chance, Im about to block you.</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>train</td>\n",
-       "      <td>chance last im you block</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>91049</th>\n",
-       "      <td>f38efec7058d2309</td>\n",
-       "      <td>Sunflower \\nThanks for letting me know, RH. An...</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>train</td>\n",
-       "      <td>sunflower letting agree interested sort and st...</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>18303</th>\n",
-       "      <td>305339814c820266</td>\n",
-       "      <td>\"\\n\\n Dear Mr.Slrubenstein. Your point about N...</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>train</td>\n",
-       "      <td>tutor unlikely government many beej distort pr...</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "</div>"
-      ],
-      "text/plain": [
-       "                      id                                       comment_text  \\\n",
-       "81227   d94c8f3495bcd65b  Again, the argument here is policy-based, it h...   \n",
-       "118300  78276268820bec18  I like how you keep going to other people's ta...   \n",
-       "156474  cebbdd894d315a6f            . \\nLast chance, Im about to block you.   \n",
-       "91049   f38efec7058d2309  Sunflower \\nThanks for letting me know, RH. An...   \n",
-       "18303   305339814c820266  \"\\n\\n Dear Mr.Slrubenstein. Your point about N...   \n",
-       "\n",
-       "        toxic  severe_toxic  obscene  threat  insult  identity_hate subject  \\\n",
-       "81227       0             0        0       0       0              0   train   \n",
-       "118300      0             0        0       0       0              0   train   \n",
-       "156474      0             0        0       0       0              0   train   \n",
-       "91049       0             0        0       0       0              0   train   \n",
-       "18303       0             0        0       0       0              0   train   \n",
-       "\n",
-       "                                        comment_text_data  \n",
-       "81227   again article simple naming population however...  \n",
-       "118300  pity baseless people's wild also get so marrie...  \n",
-       "156474                           chance last im you block  \n",
-       "91049   sunflower letting agree interested sort and st...  \n",
-       "18303   tutor unlikely government many beej distort pr...  "
-      ]
-     },
-     "execution_count": 6,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
-    "dsets['train'].data.head()"
+    "text['train'].data.head()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "text['test'].data.head()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "col = 'comment_text_data'"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "# index into the Bag of words vector\n",
+    "words_ix = {}\n",
+    "words_voc = []\n",
+    "for index, row in text['train'].data[col].iteritems():\n",
+    "    for word in row.split():\n",
+    "        words_voc.append(word)\n",
+    "        if word not in words_ix:\n",
+    "            words_ix[word] = len(words_ix)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "VOCAB_SIZE = len(words_ix)\n",
+    "NUM_LABELS = 6\n",
+    "print('VOCAB_SIZE: {} NUM_LABELS: {}'.format(VOCAB_SIZE, NUM_LABELS))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "model = BoWClassifier(NUM_LABELS, VOCAB_SIZE)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "loss_fn = nn.MultiLabelMarginLoss()\n",
+    "optimizer = optim.SGD(model.parameters(), lr=0.1)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "params = {'model' : model, \n",
+    "    'criterion': loss_fn,  \n",
+    "    'optimizer': optimizer, \n",
+    "}"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "y_train = text['train'].data[['toxic', 'severe_toxic', 'obscene', 'threat',\n",
+    "   'insult', 'identity_hate']].values\n",
+    "\n",
+    "x_train = np.vstack( text['train'].make_bow_vector('comment_text_data', words_ix))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "text['test'].process_data(col = 'comment_text', lemmalize = False, stem = False)\n",
+    "x_test = np.vstack( text['test'].make_bow_vector('comment_text_data', words_ix))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "dsets = {\n",
+    "            'train': TextDataset(x_train, y_train),\n",
+    "            'test': TextDataset(x_train, is_test = True)\n",
+    "}\n",
+    "    \n",
+    "dset_loaders = create_dataLoader(dsets, 10, pin_memory=False, use_shuffle= True)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "NLPtrainner = TrainnerNLP(params)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "NLPtrainner.train(dset_loaders['train'], 10)"
    ]
   },
   {
