improved analysis using kmeans

--- a/example/Toxic_comments_competition.ipynb
+++ b/example/Toxic_comments_competition.ipynb
@@ -2,10 +2,13 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 46,
    "metadata": {},
    "outputs": [],
    "source": [
+    "import sys\n",
+    "sys.path.append(\"../src/\")\n",
+    "\n",
     "import pandas as pd\n",
     "import numpy as np\n",
     "from torchvision import transforms\n",
@@ -19,11 +22,16 @@
     "\n",
     "from trainner import TrainnerNLP\n",
     "\n",
-    "from gensim.models import Word2Vec\n",
+    "from gensim.models import word2vec\n",
     "from sklearn.decomposition import PCA\n",
     "import matplotlib.pyplot as plt\n",
     "\n",
     "from sklearn.manifold import TSNE\n",
+    "from sklearn.model_selection import train_test_split\n",
+    "from sklearn.cluster import KMeans\n",
+    "import time\n",
+    "\n",
+    "import multiprocessing\n",
     "\n",
     "\n",
     "%matplotlib inline  "
@@ -31,11 +39,29 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 36,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Number of CPUs: 7\n"
+     ]
+    }
+   ],
+   "source": [
+    "cpu_count = 2*multiprocessing.cpu_count()-1\n",
+    "print('Number of CPUs: {}'.format(cpu_count))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 37,
    "metadata": {},
    "outputs": [],
    "source": [
-    "path2data = '../data/assigment/'\n",
+    "path2data = '../data/toxic/'\n",
     "\n",
     "text = {\n",
     "        'train': TextDataset(path2data + 'train/', is_train = True),\n",
@@ -44,31 +70,290 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 38,
    "metadata": {},
    "outputs": [],
    "source": [
-    "text['train'].process_data(col = 'headline_text', remove_stopw = True, remove_tags=True)"
+    "#col = 'headline_text'\n",
+    "col = 'comment_text'\n",
+    "text['train'].process_data(col = col, remove_stopw = True, remove_tags=True)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 39,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style>\n",
+       "    .dataframe thead tr:only-child th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: left;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>id</th>\n",
+       "      <th>comment_text</th>\n",
+       "      <th>toxic</th>\n",
+       "      <th>severe_toxic</th>\n",
+       "      <th>obscene</th>\n",
+       "      <th>threat</th>\n",
+       "      <th>insult</th>\n",
+       "      <th>identity_hate</th>\n",
+       "      <th>subject</th>\n",
+       "      <th>comment_text_data</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>0000997932d777bf</td>\n",
+       "      <td>Explanation\\nWhy the edits made under my usern...</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>train</td>\n",
+       "      <td>{im, explanation, werent, new, reverted, voted...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>000103f0d9cfb60f</td>\n",
+       "      <td>D'aww! He matches this background colour I'm s...</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>train</td>\n",
+       "      <td>{daww, stuck, 2151, matches, 11, utc, im, colo...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>000113f07ec002fd</td>\n",
+       "      <td>Hey man, I'm really not trying to edit war. It...</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>train</td>\n",
+       "      <td>{im, actual, removing, trying, care, talking, ...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>0001b41b1c6bb37e</td>\n",
+       "      <td>\"\\nMore\\nI can't make any real suggestions on ...</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>train</td>\n",
+       "      <td>{delay, references, subsection, else, need, st...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>0001d958c54c6e35</td>\n",
+       "      <td>You, sir, are my hero. Any chance you remember...</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>train</td>\n",
+       "      <td>{page, remember, sir, chance, thats, hero}</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "                 id                                       comment_text  toxic  \\\n",
+       "0  0000997932d777bf  Explanation\\nWhy the edits made under my usern...      0   \n",
+       "1  000103f0d9cfb60f  D'aww! He matches this background colour I'm s...      0   \n",
+       "2  000113f07ec002fd  Hey man, I'm really not trying to edit war. It...      0   \n",
+       "3  0001b41b1c6bb37e  \"\\nMore\\nI can't make any real suggestions on ...      0   \n",
+       "4  0001d958c54c6e35  You, sir, are my hero. Any chance you remember...      0   \n",
+       "\n",
+       "   severe_toxic  obscene  threat  insult  identity_hate subject  \\\n",
+       "0             0        0       0       0              0   train   \n",
+       "1             0        0       0       0              0   train   \n",
+       "2             0        0       0       0              0   train   \n",
+       "3             0        0       0       0              0   train   \n",
+       "4             0        0       0       0              0   train   \n",
+       "\n",
+       "                                   comment_text_data  \n",
+       "0  {im, explanation, werent, new, reverted, voted...  \n",
+       "1  {daww, stuck, 2151, matches, 11, utc, im, colo...  \n",
+       "2  {im, actual, removing, trying, care, talking, ...  \n",
+       "3  {delay, references, subsection, else, need, st...  \n",
+       "4         {page, remember, sir, chance, thats, hero}  "
+      ]
+     },
+     "execution_count": 39,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "sentences = { 'train': text['train'].data['headline_text_data'].values,\n",
-    "}"
+    "text['train'].data.head()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 40,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "sentences = { 'train': text['train'].data[col + '_data'].values}"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 41,
    "metadata": {},
    "outputs": [],
    "source": [
+    "X = sentences['train']\n",
+    "classes = ['toxic', 'severe_toxic', 'obscene', 'threat', 'insult', 'identity_hate']\n",
+    "y = text['train'].data[classes].values"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Split data in training and validation set"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 42,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#test_size = 0.2\n",
+    "#X_train, X_valid, y_train, y_valid = train_test_split(X, y, test_size=test_size, random_state=42)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 45,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Set values for various parameters\n",
+    "num_features = 300    # Word vector dimensionality                      \n",
+    "min_word_count = 40   # Minimum word count                        \n",
+    "num_workers = cpu_count  # Number of threads to run in parallel\n",
+    "context = 10          # Context window size                                                                                    \n",
+    "downsampling = 1e-3   # Downsample setting for frequent words\n",
+    "\n",
+    "\n",
     "# train model\n",
-    "model = Word2Vec(sentences['train'], min_count=100)"
+    "model = word2vec.Word2Vec(X, workers=num_workers, \\\n",
+    "            size=num_features, min_count = min_word_count, \\\n",
+    "            window = context, sample = downsampling)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "#model.init_sims(replace=True)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 48,
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "AttributeError",
+     "evalue": "'Word2Vec' object has no attribute 'syn0'",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mAttributeError\u001b[0m                            Traceback (most recent call last)",
+      "\u001b[0;32m<ipython-input-48-b44178f1b5b7>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m()\u001b[0m\n\u001b[1;32m      3\u001b[0m \u001b[0;31m# Set \"k\" (num_clusters) to be 1/5th of the vocabulary size, or an\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      4\u001b[0m \u001b[0;31m# average of 5 words per cluster\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 5\u001b[0;31m \u001b[0mword_vectors\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mmodel\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0msyn0\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m      6\u001b[0m \u001b[0mnum_clusters\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mword_vectors\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mshape\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;36m0\u001b[0m\u001b[0;34m]\u001b[0m \u001b[0;34m/\u001b[0m \u001b[0;36m5\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      7\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;31mAttributeError\u001b[0m: 'Word2Vec' object has no attribute 'syn0'"
+     ]
+    }
+   ],
+   "source": [
+    "start = time.time() # Start time\n",
+    "\n",
+    "# Set \"k\" (num_clusters) to be 1/5th of the vocabulary size, or an\n",
+    "# average of 5 words per cluster\n",
+    "word_vectors = model.\n",
+    "num_clusters = word_vectors.shape[0] / 5\n",
+    "\n",
+    "# Initalize a k-means object and use it to extract centroids\n",
+    "kmeans_clustering = KMeans( n_clusters = num_clusters )\n",
+    "idx = kmeans_clustering.fit_predict( word_vectors )\n",
+    "\n",
+    "# Get the end time and print how long the process took\n",
+    "end = time.time()\n",
+    "elapsed = end - start\n",
+    "print (\"Time taken for K Means clustering: \", elapsed, \"seconds.\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "# Create a Word / Index dictionary, mapping each vocabulary word to\n",
+    "# a cluster number                                                                                            \n",
+    "word_centroid_map = dict(zip( model.index2word, idx ))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "# For the first 10 clusters\n",
+    "for cluster in xrange(0,10):\n",
+    "    \n",
+    "    print (\"\\nCluster %d\" % cluster)\n",
+    "    words = []\n",
+    "    for i in xrange(0,len(word_centroid_map.values())):\n",
+    "        if( word_centroid_map.values()[i] == cluster ):\n",
+    "            words.append(word_centroid_map.keys()[i])\n",
+    "    print (words)"
    ]
   },
   {
@@ -120,7 +405,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "def tsne_plot(model):\n",
@@ -174,7 +461,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": []
   }
@@ -195,7 +484,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.4"
+   "version": "3.6.3"
   }
  },
  "nbformat": 4,
