changed notebook name

--- a/example/sentiment_analysis.ipynb
+++ b/example/sentiment_analysis.ipynb
@@ -940,7 +940,8 @@
      "output_type": "stream",
      "text": [
       "Training K-means models for 1 cluster/s...\n",
-      "Training K-means models for 2 cluster/s...\n"
+      "Training K-means models for 2 cluster/s...\n",
+      "Training K-means models for 3 cluster/s...\n"
      ]
     }
    ],
