--- a/example/news_headlines.ipynb
+++ b/example/news_headlines.ipynb
@@ -2,12 +2,14 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [],
    "source": [
     "import sys\n",
     "sys.path.append(\"../src/\")\n",
+    "from tqdm import tqdm\n",
+    "\n",
     "\n",
     "import multiprocessing\n",
     "from gensim.models import word2vec\n",
@@ -36,7 +38,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 17,
    "metadata": {
     "collapsed": true
    },
@@ -51,7 +53,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 18,
    "metadata": {
     "collapsed": true
    },
@@ -63,29 +65,127 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 19,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style>\n",
+       "    .dataframe thead tr:only-child th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: left;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>publish_date</th>\n",
+       "      <th>headline_text</th>\n",
+       "      <th>subject</th>\n",
+       "      <th>headline_text_data</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>20030303</td>\n",
+       "      <td>unhooked brakes to blame for taiwan train disa...</td>\n",
+       "      <td>news_headlines</td>\n",
+       "      <td>{blame, train, taiwan, disaster, brakes, unhoo...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>20030918</td>\n",
+       "      <td>oldest prisoner in tas released citing health</td>\n",
+       "      <td>news_headlines</td>\n",
+       "      <td>{prisoner, released, tas, oldest, citing, health}</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>20030913</td>\n",
+       "      <td>nine reportedly dead in portuguese plane crash</td>\n",
+       "      <td>news_headlines</td>\n",
+       "      <td>{crash, portuguese, reportedly, dead, nine, pl...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>20031031</td>\n",
+       "      <td>nurses welcome medicare rebate plan</td>\n",
+       "      <td>news_headlines</td>\n",
+       "      <td>{plan, welcome, medicare, nurses, rebate}</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>20030930</td>\n",
+       "      <td>un cuts its iraq staff</td>\n",
+       "      <td>news_headlines</td>\n",
+       "      <td>{iraq, staff, cuts, un}</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "   publish_date                                      headline_text  \\\n",
+       "0      20030303  unhooked brakes to blame for taiwan train disa...   \n",
+       "1      20030918      oldest prisoner in tas released citing health   \n",
+       "2      20030913     nine reportedly dead in portuguese plane crash   \n",
+       "3      20031031                nurses welcome medicare rebate plan   \n",
+       "4      20030930                             un cuts its iraq staff   \n",
+       "\n",
+       "          subject                                 headline_text_data  \n",
+       "0  news_headlines  {blame, train, taiwan, disaster, brakes, unhoo...  \n",
+       "1  news_headlines  {prisoner, released, tas, oldest, citing, health}  \n",
+       "2  news_headlines  {crash, portuguese, reportedly, dead, nine, pl...  \n",
+       "3  news_headlines          {plan, welcome, medicare, nurses, rebate}  \n",
+       "4  news_headlines                            {iraq, staff, cuts, un}  "
+      ]
+     },
+     "execution_count": 19,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "text['train'].data.head()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 24,
    "metadata": {
     "collapsed": true
    },
    "outputs": [],
    "source": [
-    "sentences = { 'train': text['train'].data[col + '_data'].values}"
+    "sentences = { 'train': text['train'].data[col + '_data'].values}\n",
+    "X_train = sentences['train']"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "100%|██████████| 1000001/1000001 [00:00<00:00, 2504641.78it/s]\n",
+      "100%|██████████| 1000001/1000001 [00:00<00:00, 2483610.03it/s]\n"
+     ]
+    }
+   ],
    "source": [
     "# Set values for various parameters\n",
     "num_features = 300    # Word vector dimensionality                      \n",
