fixed save image issue from elbow analysis

--- a/example/news_headlines.ipynb
+++ b/example/news_headlines.ipynb
@@ -289,13 +289,13 @@
     "\n",
     "        model.build_vocab(X_train)\n",
     "        model.train(X_train, \\\n",
-    "                    total_examples=W2Vmodel.corpus_count, epochs=W2Vmodel.epochs)\n",
+    "                    total_examples=model.corpus_count, epochs=model.epochs)\n",
     "        \n",
     "        \n",
     "        if average_features:\n",
     "            f_train = getAvgFeatureVecs( X_train, model, num_features )\n",
     "        else:\n",
-    "            f_train = np.concatenate([buildWordVector(W2Vmodel, z, num_features) for z in map(lambda x: x, X_train)])\n",
+    "            f_train = np.concatenate([buildWordVector(model, z, num_features) for z in map(lambda x: x, X_train)])\n",
     "        \n",
     "        scaler = StandardScaler()\n",
     "        f_train = scaler.fit_transform(f_train)\n",
@@ -316,7 +316,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "def find_nb_clusters(f_train, kmax = 25, plot=True):\n",
+    "def find_nb_clusters(f_train, kmax = 25, plot=True, path2save = ''):\n",
     "    wcss = []\n",
     "    cali = []\n",
     "    \n",
@@ -332,7 +332,7 @@
     "        \n",
     "    if plot:\n",
     "\n",
-    "        plt.figure(figsize=(12, 4))\n",
+    "        fig = plt.figure(figsize=(12, 4))\n",
     "        plt.subplot(1, 2, 1)\n",
     "        plt.plot(range(2, kmax), cali, '-o')\n",
     "        plt.title('Calinski Harabaz Score')\n",
@@ -346,8 +346,8 @@
     "        plt.xlabel('Number of clusters')\n",
     "        plt.ylabel('Score')\n",
     "        plt.grid()\n",
-    "        \n",
     "        plt.show()\n",
+    "        fig.savefig(path2save)\n",
     "    return wcss, cali"
    ]
   },
@@ -472,13 +472,9 @@
     "    \n",
     "    print('Dataset length: {}. Year: {}'.format(len(X_train), y))\n",
     "    f_train, _ = extract_features(X_train[col + '_data'].values, average_features = True)\n",
-    "    find_nb_clusters(f_train, kmax=20)\n",
+    "    path2save = './figs/elbow/' + features_extractor + 'ElbowRule'+'_'+str(y)+'.png'\n",
+    "    find_nb_clusters(f_train, kmax=20, path2save = path2save)\n",
     "    \n",
-    "    if y != -1:\n",
-    "        plt.savefig('./figs/elbow/' + features_extractor + 'ElbowRule'+'_'+str(y)+'.png')\n",
-    "    else:\n",
-    "        plt.savefig('./figs/elbow/'+ features_extractor +'ElbowRule.png')\n",
-    "        \n",
     "        \n",
     "    n_clusters= 5\n",
     "    \n",
@@ -580,8 +576,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "find_nb_clusters(f_train, kmax=20)\n",
-    "plt.savefig('./figs/elbow/'+ features_extractor +'ElbowRule.png')"
+    "path2save = './figs/elbow/'+ features_extractor +'ElbowRule.png'\n",
+    "find_nb_clusters(f_train, kmax=20, path2save=path2save)"
    ]
   },
   {
